updated bio page, footer

--- a/bio.html
+++ b/bio.html
@@ -66,7 +66,13 @@
            
                    <div>
               <p>In line with Myers-Briggs' 16 Personalities, Julie Rose is identified as a Turbulent Advocate (INFJ-T) who are consired as introverted, intuitive, feeling, judging, and turbulent with the role of Diplomats that focuses on empathy and cooperation, shining in diplomacy and counselling. Interestingly, she is a Constant Improver deemed to be quiet, individualistic, perfectionistic, and success-driven individual, often spending a lot of time and effort ensuring the result of their work is the best it can be.</p>
-              <a href="https://www.16personalities.com/profiles/21871d6338459" target="_blank">See more Info on Julie's Personality -></a>
+              
+         </div>
+
+         <div class="forda-fersonality-container">
+            <img src="images/infj-advocate-s2-female.svg" alt="">
+            <div class="ffc-a-box"><a href="https://www.16personalities.com/profiles/21871d6338459" target="_blank"> See more Info on Julie's Personality </a></div>
+            <img src="images/role-diplomat.svg" alt="">
          </div>
         </div>
     </section>
@@ -74,7 +80,7 @@
     <footer>
 
         <div class="footer">
-            <ul style="list-style-type: none;">
+            <ul style="list-style-type:circle">
                 <li><a href="https://www.facebook.com/julierose.oyong/">&lt;Facebook&gt;</a></li>
                 <li><a href="mailto:julieroseoyong@student.laverdad.edu.ph">&lt;School Email&gt;</a></li>
                 <li><a href="mailto:oyong.julie@gmail.com">&lt;Work Email&gt;</a></li>
